macro(add_nfs_test name)
    add_executable(${name} ${name}.c)
    target_link_libraries(${name} nfs chimera_server)
    add_test(NAME chimera/server/${name} COMMAND ${CMAKE_CURRENT_BINARY_DIR}/${name})
    set_tests_properties(chimera/server/${name} PROPERTIES 
        ENVIRONMENT "TEST_FILE=${CMAKE_CURRENT_SOURCE_DIR}/${name}.c")
endmacro()

add_nfs_test(libnfs_nfs3_mount)
add_nfs_test(libnfs_nfs3_linux_readdir) 
add_nfs_test(libnfs_nfs3_linux_create)
add_nfs_test(libnfs_nfs3_linux_read)
add_nfs_test(libnfs_nfs3_linux_mkdir)
add_nfs_test(libnfs_nfs3_linux_symlink)
add_nfs_test(libnfs_nfs3_linux_remove)
add_nfs_test(libnfs_nfs3_linux_rmdir)
add_nfs_test(libnfs_nfs4_mount)
add_nfs_test(libnfs_nfs4_readdir_shares)
add_nfs_test(libnfs_nfs4_linux_readdir)
add_nfs_test(libnfs_nfs4_linux_create)
